# key-ripper

./: .gitmodules  README.md  kitspace.yaml  parts.md
.github/workflows/: clippy.yml  rustfmt.yml
case/: case_feet.step  keyboard.step
firmware/: Cargo.toml  README.md  build.rs
firmware/.cargo/: config.toml
firmware/src/: debounce.rs  hid_class.rs  hid_descriptor.rs  key_codes.rs  key_mapping.rs  key_scan.rs  keycodes.rs  main.rs
pcb/: .gitignore  README.md  fp-lib-table  key-ripper.kicad_pcb  key-ripper.kicad_pro  key-ripper.kicad_sch  sym-lib-table
pcb/bottom-plate/: bottom-plate.kicad_pcb  bottom-plate.kicad_pro  bottom-plate.kicad_sch  fp-lib-table
pcb/extra-parts/footprints/: key-switch.kicad_mod  rp2040.kicad_mod  simple-usb-c.kicad_mod  tactile-switch.kicad_mod
pcb/extra-parts/footprints/packages3d/: key-switch.wrl  rp2040.wrl  simple-usb-c.wrl  tactile-switch.wrl
pcb/extra-parts/schematics/: rp2040.kicad_sym  simple-usb-c.kicad_sym  tactile-switch.kicad_sym
pcb/pattern-generator/: .gitignore  Cargo.toml
pcb/pattern-generator/src/: main.rs
pcb/production/v0.1/: bom.csv  key-ripper-all-pos.csv  key-ripper-bottom-pos.csv
pcb/production/v0.1/gerber/: key-ripper-B_Cu.gbl  key-ripper-B_Cu.gbr  key-ripper-B_Mask.gbr  key-ripper-B_Mask.gbs  key-ripper-B_Silkscreen.gbo  key-ripper-B_Silkscreen.gbr  key-ripper-Edge_Cuts.gbr  key-ripper-Edge_Cuts.gm1  key-ripper-F_Cu.gbr  key-ripper-F_Mask.gbr  key-ripper-F_Mask.gts  key-ripper-F_Silkscreen.gbr  key-ripper-F_Silkscreen.gto  key-ripper-NPTH-drl_map.gbr  key-ripper-NPTH.drl  key-ripper-PTH.drl
pcb/production/v0.1/pcb/: bom.csv
pcb/production/v0.1/pcb/gerber/: key-ripper-B_Paste.gbp  key-ripper-F_Cu.gtl  key-ripper-F_Paste.gtp  key-ripper-PTH-drl_map.gbr
pcb/production/v0.2/: bom.csv  key-ripper-top-pos.csv
pcb/production/v0.2/gerber/: key-ripper-Edge_Cuts.gm1  key-ripper-F_Mask.gts  key-ripper-F_Paste.gtp  key-ripper-F_Silkscreen.gto  key-ripper-NPTH-drl_map.gbr  key-ripper-PTH-drl_map.gbr  key-ripper-PTH.drl
pcb/production/v0.2/pcb/: key-ripper-bottom-pos.csv
pcb/production/v0.2/pcb/gerber/: key-ripper-B_Cu.gbl  (+5 more)
pcb/production/v0.3/pcb/: bom.csv  key-ripper-bottom-pos.csv
pcb/top-plate/: fp-lib-table  top-plate.kicad_pcb  top-plate.kicad_pro  top-plate.kicad_sch
pcb/top-plate/production/: top-plate-User_Eco2.dxf  top-plate.scad
pcb/top-plate/production/gerber/: top-plate-B_Cu.gbl  top-plate-B_Mask.gbs  top-plate-B_Paste.gbp  top-plate-B_Silkscreen.gbo  top-plate-F_Silkscreen.gto  top-plate-NPTH-drl_map.gbr  top-plate-NPTH.drl  top-plate-PTH-drl_map.gbr  top-plate-PTH.drl
(+56 files in other folders)
