[package]
name = "key-ripper"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1"
embedded-time = "0.12"
fugit = "0.3"
panic-reset = "0.1"
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
usb-device = "0.3"
# usbd-hid = "0.7"
usbd-human-interface-device = "0.5"
critical-section = { version = "1" }

# Dependencies for debug probe
defmt = "0.3" # Macros and support for deferred formatting logging
defmt-rtt = "0.4" # Contains a definition for a #[global_logger]
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Needed to enable DWARF location info
[profile.release]
debug = 2
